# contraction-verifier

./: .gitattributes  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/core_banach/: example_core.json
examples/coupled_streams/: example_coupled.json
examples/gamma_v/: example_gammaV.json
examples/ledger/: example_ledger.json
paper/: main.tex
scripts/: run_all_examples.sh
src/: verify_gaps.py
src/contraction_verifier/: __init__.py  cli.py  verify_gaps.py
tests/: test_examples.py
