[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contraction-verifier"
version = "0.1.1"
description = "Advanced contraction verification (core, ledger, coupled streams, gamma_V) with interval + verified numerics"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Cody" }]
dependencies = [
  "numpy>=1.21.0",
  "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0"
]

[project.scripts]
contraction-verify = "contraction_verifier.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["contraction_verifier"]
